// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept "style" prop 1`] = `
.emotion-0 {
  background: #F0F0F5;
  border: 0;
  border-right: 1px solid #D3D4DD;
  padding: 1rem;
  width: 300px;
  overflow-y: auto;
  grid-row: 1;
  grid-column: 1;
  background: red;
}

<div>
  <div
    class="emotion-0"
  >
    Content
  </div>
</div>
`;

exports[`should render correctly 1`] = `
.emotion-0 {
  background: #F0F0F5;
  border: 0;
  border-right: 1px solid #D3D4DD;
  padding: 1rem;
  width: 300px;
  overflow-y: auto;
  grid-row: 1;
  grid-column: 1;
}

<div>
  <div
    class="emotion-0"
  >
    Content
  </div>
</div>
`;
